--- a/styles.css
+++ b/styles.css
@@ -5,3 +5,12 @@
 .red {
     color: red;
 }
+
+.btn {
+    margin-left: 10px;
+}
+
+table.tablesorter tbody td {
+    font-size: 16px;
+    vertical-align: middle;
+}
