--- a/styles.css
+++ b/styles.css
@@ -14,3 +14,20 @@ table.tablesorter tbody td {
     font-size: 16px;
     vertical-align: middle;
 }
+
+.modal-body {
+    padding: 20px;
+}
+
+.modal-body label {
+    margin-top: 5px;
+}
+
+.modal-body input {
+    margin-top: 5px;
+}
+
+.modal-body .btn {
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
