--- a/styles.css
+++ b/styles.css
@@ -6,13 +6,22 @@
     color: red;
 }
 
-.btn {
-    margin-left: 10px;
-}
-
 table.tablesorter tbody td {
     font-size: 16px;
     vertical-align: middle;
+}
+
+.modal-m {
+    width: 470px;
+}
+
+.task-modal .save {
+    margin-top: 5px;
+    margin-bottom: 10px;
+}
+
+.assignee-modal .save {
+    margin-bottom: 10px;
 }
 
 .modal-body {
@@ -25,11 +34,6 @@ table.tablesorter tbody td {
 
 .modal-body input {
     margin-top: 5px;
-}
-
-.modal-body .btn {
-    margin-top: 20px;
-    margin-bottom: 20px;
 }
 
 .status {
